Account Remove Proposition
Updates to HTML,Js, pages etc

--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
@@ -10,3 +10,25 @@
 }
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+
+    $(".proposition-remove").on('click', function (e) {
+        e.preventDefault();
+        var data = $(this).parents('form:first').serialize();
+        propositionRemoved(data);
+    });
+
+    function propositionRemoved(data) {
+        $.post({
+            url: "?handler=RemoveAccountProposition",
+            data: data,
+            success: function (result) {
+                console.log(result);
+                $("#account-propositions").html('');
+                $("#account-propositions").html(result);
+            }
+        });
+    };
+    });
+</script>
