--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SavedPropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SavedPropositionsPartial.cshtml
@@ -11,3 +11,25 @@
         }
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+
+    $(".proposition-submit").on('click', function (e) {
+        e.preventDefault();
+        var data = $(this).parents('form:first').serialize();
+        propositionAdded(data);
+    });
+
+    function propositionAdded(data) {
+        $.post({
+            url: "?handler=AddAccountProposition",
+            data: data,
+            success: function (result) {
+                console.log(result);
+                $("#account-propositions").html('');
+                $("#account-propositions").html(result);
+            }
+        });
+    };
+    });
+</script>
