--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/LivePropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/LivePropositionsPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿@model bad_each_way_finder.Pages.Shared.PropositionsModel
 
-<div class="row border border-dark rounded bg-light p-3 mb-5">
+<div class="row border border-dark rounded bg-light-blue p-3 mb-5">
     <div class="col-12">
         @foreach (var meeting in Model.Propositions.GroupBy(e => e.EventName))
         {
-            <div class="row mb-3">
+            <div class="row mb-3 bg-dark-blue text-light p-1 rounded">
 
                 <div class="col-12">
                     <span class="me-13 font-lg">@meeting.Key</span>
@@ -13,8 +13,12 @@
                 <div class="col-12">
                     @foreach (var race in meeting.GroupBy(r => r.EventDateTime))
                     {
-                        <div class="me-1 mb-2">
-                            <div class="font-md" style="width: 60px;">@race.Key.ToString("HH:mm")</div>
+                        <div class="me-1 mb-2 bg-lighter-blue text-dark p-2 rounded">
+                            <div class="font-md" style="width: 100px;">
+                                <span class="me-1">@race.Key.ToString("HH:mm")</span>
+                                <span class="text-success me-1">@race.First().SportsbookNumberOfPlaces</span>
+                                <span class="text-success">1/@race.First().SportsbookPlaceFractionDenominator</span>
+                             </div>
 
                             @foreach (var proposition in race)
                             {
