--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SimpleSinglePropositionPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SimpleSinglePropositionPartial.cshtml
@@ -1,23 +1,25 @@
 ﻿@model bad_each_way_finder_domain.DomainModel.Proposition
 
-<div class="row">
-    <div class="col-3">
+@{
+    var backgroundEachWayEv = Model.EachWayExpectedValue > 0 ? "bg-success" : "bg-danger";
+}
+<div class="row w-50 @backgroundEachWayEv text-light m-1 p-1 border border-dark rounded">
+    <div class="col-4">
         @Model.RunnerName
     </div>
-    <div class="col-1">
-        @Model.WinRunnerOddsDecimal.ToString("0.00")
+    <div class="col-5">
+        <span class="text-cyan font-md">@Model.WinRunnerOddsNumerator/@Model.WinRunnerOddsDenominator</span>
+        
+        [<span class="text-pink"> @Model.ExchangeWinPrice.ToString("0.00") : </span>
+        <span class="text-pink">@Model.ExchangePlacePrice.ToString("0.00") </span>]
+        <span class="text-cyan">@Model.EachWayPlacePart.ToString("0.00")</span>
     </div>
-    <div class="col-1">
-        @Model.ExchangeWinPrice.ToString("0.00")
-    </div>
-    <div class="col-1">
-        @Model.ExchangePlacePrice.ToString("0.00")
-    </div>
+
     <div class="col-1">
         @{
-            var textEachWayEv = Model.EachWayExpectedValue > 0 ? "text-success" : "text-danger";
+            var textEachWayEv = Model.EachWayExpectedValue > 0 ? "text-light" : "text-light";
         }
-        <span class="@textEachWayEv">@Model.EachWayExpectedValue.ToString("0.000%")</span>
+        <span class="@textEachWayEv">@Model.EachWayExpectedValue.ToString("0.0%")</span>
     </div>
 </div>
 
