--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/bad_each_way_finder.styles.css" asp-append-version="true" />
+
+    <script src="https://kit.fontawesome.com/177a1325c3.js" crossorigin="anonymous"></script>
+
 </head>
 <body class="site-bg">
     <header>
