--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/LivePropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/LivePropositionsPartial.cshtml
@@ -6,8 +6,8 @@
         {
             <div class="row mb-3 bg-dark-blue text-light p-1 rounded">
 
-                <div class="col-12">
-                    <span class="me-13 font-lg">@meeting.Key</span>
+                <div class="col-12 m-1">
+                    <span class="font-lg text-warning">@meeting.Key</span>
                 </div>
 
                 <div class="col-12">
