--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SavedPropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SavedPropositionsPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@model bad_each_way_finder.Pages.Shared.PropositionsModel
 
 
-<div class="row bg-green-bright p-3 rounded border border-bottom"><span class="font-lg">Saved Propositions</span></div>
-<div class="row font-md bg-green-bright p-1 rounded mb-1">
+<div class="row bg-green-bright p-3 rounded border border-dark mb-1"><span class="font-lg">Saved Propositions</span></div>
+<div class="row font-md bg-sub-header p-1 rounded border border-dark mb-1">
     <div class="col-1">Saved At</div>
     <div class="col-1">Event</div>
     <div class="col-2">Runner Name</div>
