Propositions and races updates
History section started

--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Propositions.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Propositions.cshtml
@@ -2,7 +2,7 @@
 @model bad_each_way_finder.Pages.Shared.PropositionsModel
 
 <div class="mb-3">
-    <a href="/Propositions" class="btn btn-warning me-2">Refresh <i class="fa fa-refresh" aria-hidden="true"></i></a>
+    <a href="/Propositions" class="btn btn-primary me-2">Refresh <i class="fa fa-refresh" aria-hidden="true"></i></a>
 
     <a class="btn btn-danger" id="refresh-auto-racing">Refresh Auto Off</a>
 </div>
