--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
@@ -1,11 +1,13 @@
 ﻿@model bad_each_way_finder.Pages.Shared.PropositionsModel
 
 <div class="row bg-green-bright p-3 rounded border border-dark mb-1"><span class="font-lg">My Propositions</span></div>
-<div class="row bg-sub-header font-md p-1 ps-3 rounded border border-dark mb-1">
+<div class="row bg-sub-header font-md p-3 rounded border border-dark mb-1">
     <div class="col-1">Saved At</div>
-    <div class="col-1">Event</div>
+    <div class="col-1">Meeting</div>
+    <div class="col-1">Time</div>
     <div class="col-2">Runner Name</div>
     <div class="col-1">Odds</div>
+    <div class="col-1">EW Terms</div>
     <div class="col-2">Saved At Prices</div>
     <div class="col-2">Latest Prices</div>
     <div class="col-1">Save/Remove</div>
@@ -15,7 +17,10 @@
 <div class="row border border-dark rounded p-3 mb-5 bg-light-blue">
     <div class="col-12">
 @foreach (var proposition in Model.AccountPropositions
-   .OrderByDescending(p => p.RecordedAt))
+        .OrderBy(p => p.EventName)
+        .ThenBy(p => p.EventDateTime)
+        .ThenBy(p => p.WinRunnerOddsDecimal)
+        .ThenBy(p => p.RunnerName))
 {
     @await Html.PartialAsync("SinglePropositionPartial", proposition)
 }
