--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/PropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/PropositionsPartial.cshtml
@@ -2,13 +2,13 @@
 
 <div id="propositions">
     <div class="row mt-2 mb-2 w-25 text-center">
-         <span id="last-updated-time" class="text-black border border-dark rounded-1 bg-mintcream p-1">Last Updated - @DateTime.Now.ToString("HH:mm:ss")</span>
+         <span id="last-updated-time" class="text-dark-magenta border border-dark rounded-1 bg-light-pink p-1">Last Updated - @DateTime.Now.ToString("HH:mm:ss")</span>
     </div>
 
     <div class="row bg-green-bright p-3 rounded border border-dark mb-1"><span class="font-lg">Live Propositions</span></div>
 
     <div id="live-propositions">
-        @if (Model.Propositions.Any())
+        @if (Model.LivePropositions.Any())
             {
             @await Html.PartialAsync("LivePropositionsPartial", Model)
         }
