--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SavedPropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SavedPropositionsPartial.cshtml
@@ -2,21 +2,24 @@
 
 
 <div class="row bg-green-bright p-3 rounded border border-dark mb-1"><span class="font-lg">Saved Propositions</span></div>
-<div class="row font-md bg-sub-header p-1 rounded border border-dark mb-1">
+<div class="row font-md bg-sub-header p-3 rounded border border-dark mb-1">
     <div class="col-1">Saved At</div>
-    <div class="col-1">Event</div>
+    <div class="col-1">Meeting</div>
+    <div class="col-1">Time</div>
     <div class="col-2">Runner Name</div>
     <div class="col-1">Odds</div>
+    <div class="col-1">EW Terms</div>
     <div class="col-2">Saved At Prices</div>
     <div class="col-2">Latest Prices</div>
     <div class="col-1">Save/Remove</div>
-
-
 </div>
 <div class="row border border-dark rounded p-3 mb-5 bg-light-blue">
     <div class="col-12">
         @foreach (var proposition in Model.SavedPropositions
-        .OrderByDescending(p => p.RecordedAt))
+        .OrderBy(p => p.EventName)
+        .ThenBy(p => p.EventDateTime)
+        .ThenBy(p => p.WinRunnerOddsDecimal)
+        .ThenBy(p => p.RunnerName))
         {
             @await Html.PartialAsync("SinglePropositionPartial", proposition)
         }
