--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SinglePropositionPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SinglePropositionPartial.cshtml
@@ -7,14 +7,20 @@
     <div class="col-1">
         @Model.RecordedAt
     </div>
-    <div class="col-1">
-        @Model.EventName @Model.EventDateTime.ToString("HH:mm")
+    <div class="col-1 text-warning">
+        @Model.EventName.Substring(0, @Model.EventName.Length - 8) 
+    </div>
+    <div class="col-1 text-warning">
+        @Model.EventDateTime.ToString("HH:mm")
     </div>
     <div class="col-2 font-md">
         @Model.RunnerName
     </div>
     <div class="col-1">
         <span class="text-cyan font-md">@Model.WinRunnerOddsNumerator/@Model.WinRunnerOddsDenominator</span>
+    </div>
+    <div class="col-1">
+        @Model.SportsbookNumberOfPlaces 1/@Model.SportsbookPlaceFractionDenominator
     </div>
     <div class="col-2">
         [<span class="text-pink"> @Model.ExchangeWinPrice.ToString("0.00") : </span>
