Proposition display and history table updates

--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/HistoryTablePartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/HistoryTablePartial.cshtml
@@ -1,11 +1,10 @@
 ﻿@using NonFactors.Mvc.Grid;
-
 @model IEnumerable<bad_each_way_finder_domain.DomainModel.Proposition>
-<div class="bg-light">
-@(
-    Html
-    .Grid(Model)
-    .Build(columns =>
+
+<div class="bg-light" style="font-size:10px;">
+    @(Html
+        .Grid(Model)
+        .Build(columns =>
         {
             columns.Add(m => m.RecordedAt).Titled("Recorded At")
             .Formatted("{0:dd-MM-yyyy HH:mm}")
@@ -16,8 +15,8 @@
             .Sortable(true)
             .Filterable(true);
 
-            columns.Add(m => m.EventDateTime).Titled("Event")
-            .Formatted("{0:dd-MM-yyyy HH:mm}")
+            columns.Add(m => m.EventDateTime).Titled("Event Time")
+            .Formatted("{0:HH:mm}")
             .Sortable(true)
             .Filterable(GridFilterType.Multi);
 
@@ -25,9 +24,30 @@
             .Sortable(true)
             .Filterable(true);
 
-            columns.Add(m => m.WinRunnerOddsDecimal.ToString("0.00")).Titled("Odds")
+            columns.Add(m => m.FinalAdjustedOddsDecimal.ToString("0.00")).Titled("Final Odds Taken")
             .Sortable(true)
             .Filterable(true);
+
+            columns.Add(m => m.Rule4Deduction.ToString("0")).Titled("Rule 4")
+            .Sortable(true)
+            .Filterable(true);
+
+            columns.Add(m => m.LatestWinPrice.ToString("0.00")).Titled("Final Exch Win Price")
+            .Sortable(true)
+            .Filterable(true);
+
+            columns.Add(m => m.LatestWinExpectedValue.ToString("0.00%")).Titled("Final Win EV")
+            .Sortable(true)
+            .Filterable(true);
+
+            columns.Add(m => m.LatestPlacePrice.ToString("0.00")).Titled("Final Exch Place Price")
+            .Sortable(true)
+            .Filterable(true);
+
+            columns.Add(m => m.LatestEachWayExpectedValue.ToString("0.00%")).Titled("Final EW EV")
+            .Sortable(true)
+            .Filterable(true);
+
         })
         .Pageable(pager =>
         {
@@ -38,3 +58,5 @@
         .Sortable()
         .Empty("No Data Found"))
 </div>
+
+
