--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/History.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/History.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+@using NonFactors.Mvc.Grid;
 @model bad_each_way_finder.Pages.HistoryModel
 
 @await Html.PartialAsync("HistoryTablePartial", Model.Propositions);
+
