--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model bad_each_way_finder.Pages.Shared.PropositionsModel
 
-<div class="row bg-green-bright p-3 rounded border border-dark mb-1"><span class="font-lg">My Propositions</span></div>
+<div class="row bg-green-bright p-3 rounded border border-dark mb-1"><span class="font-lg">Today's Tracked Propositions</span></div>
 <div class="row bg-sub-header font-md p-3 rounded border border-dark mb-1">
     <div class="col-1">Saved At</div>
     <div class="col-1">Meeting</div>
@@ -17,10 +17,10 @@
 <div class="row border border-dark rounded p-3 mb-5 bg-light-blue">
     <div class="col-12">
 @foreach (var proposition in Model.AccountPropositions
-        .OrderBy(p => p.EventName)
-        .ThenBy(p => p.EventDateTime)
+        .OrderBy(p => p.EventDateTime)
         .ThenBy(p => p.WinRunnerOddsDecimal)
-        .ThenBy(p => p.RunnerName))
+        .ThenBy(p => p.RunnerName)
+        .ThenBy(p => p.EventName))
 {
     @await Html.PartialAsync("SinglePropositionPartial", proposition)
 }
