redirect to login function on history

--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/HistoryTablePartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/HistoryTablePartial.cshtml
@@ -28,6 +28,11 @@
             .Sortable(true)
             .Filterable(true);
 
+            columns.Add(m => m.SportsbookNumberOfPlaces).Titled("EW Terms")
+            .RenderedAs(m => $"{m.SportsbookNumberOfPlaces} 1/{m.SportsbookPlaceFractionDenominator}")
+            .Sortable(false)
+            .Filterable(false); ;
+
             columns.Add(m => m.Rule4Deduction.ToString("0")).Titled("Rule 4")
             .Sortable(true)
             .Filterable(true);
